[fix login page] left margin button on mobile

--- a/resources/sass/login.scss
+++ b/resources/sass/login.scss
@@ -102,5 +102,6 @@
 @media only screen and (min-width : 321px) {
     .d-flex{
         padding-bottom: 13px;
+        padding-left: 0;
     }
 }
